# penn-course-bot

./: .gitignore  LICENSE  PITBot.py  README.md  allCourses.txt  autoregister.py  main.py  pyproject.toml  registrar.py  requirements.txt  tests.py
