[tool.poetry]
name = "pitbot"
version = "0.1.0"
description = "PIT Bot"
authors = ["Brandon Wang <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
twilio = "^6.50.1"
requests = "^2.25.1"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
